--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsdom": "^22.1.0",
+    "node-fetch": "^2.6.12",
     "puppeteer": "^19.7.2"
   }
 }
