--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsdom": "^22.1.0",
-    "node-fetch": "^2.6.12",
-    "puppeteer": "^19.7.2"
+    "node-fetch": "^2.6.12"
   }
 }
