--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "jsdom": "^22.1.0",
-    "node-fetch": "^2.6.12"
+    "express": "^4.18.2"
   }
 }
