--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tradingtipsfromsamer",
+  "name": "samerstrategies",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "puppeteer": "^19.7.2"
+    "jsdom": "^22.1.0",
+    "node-fetch": "^2.6.12"
   }
 }
