--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "jsdom": "^22.1.0",
     "node-fetch": "^2.6.12"
   }
