--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "jsdom": "^16.7.0",
-    "node-fetch": "^2.6.12"
+    "node-fetch": "^2.6.12",
+    "node-html-parser": "^6.1.5"
   }
 }
